--- a/programming/python/59_Ways.org
+++ b/programming/python/59_Ways.org
@@ -2359,9 +2359,149 @@
     - Only consider private attributes if worried about naming conflicts. (not a very strong argument)
 
       
-*** TODO 28. Inherit from =collections.abc= for Custom Container Types
+*** DONE 28. Inherit from =collections.abc= for Custom Container Types
+    CLOSED: [2019-07-15 Mon 14:26]
+    - State "DONE"       from "IN-PROGRESS" [2019-07-15 Mon 14:26]
+    :LOGBOOK:
+    CLOCK: [2019-07-15 Mon 13:52]--[2019-07-15 Mon 14:26] =>  0:34
+    :END:
+
+    Inheriting from =list= because the Custom Container happens to be a =list=.
+
+    #+begin_src python :session :results output :exports both
+      class FrequencyList(list):
+          def __init__(self, members):
+              super().__init__(members)
+
+          def frequency(self):
+              counts = {}
+              for item in self:
+                  counts.setdefault(item, 0)
+                  counts[item] += 1
+              return counts
+
+      freq_list = FrequencyList(['a', 'b', 'a', 'c', 'b', 'a', 'd'])
+      print('Length is', len(freq_list))
+      freq_list.pop()
+      print('After pop:', repr(freq_list))
+      print('Frequency:', freq_list.frequency())
+    #+end_src
+
+    #+RESULTS:
+    : Length is 7
+    : After pop: ['a', 'b', 'a', 'c', 'b', 'a']
+    : Frequency: {'a': 3, 'b': 2, 'c': 1}
+
+    For objects that you'd like to /feel/ like a =list=, allowing indexing, but isn't a =list= subclass.
+
+    For example, you'd like to work with this =BinaryNode= the same way you'd work with a =list= or a =tuple=.
+
+    #+begin_src python :session :results output :exports both
+      class BinaryNode(object):
+          def __init__(self, value, left=None, right=None):
+              self.value = value
+              self.left = left
+              self.right = right
+
+
+      class IndexableNode(BinaryNode):
+          def _search(self, count, index):
+              return (BinaryNode(5), 10)  # DFS really though
+
+          def __getitem__(self, index):
+              found, _ = self._search(0, index)
+              if not found:
+                  raise IndexError('Index out of range')
+              return found.value
+
+
+      tree = IndexableNode(
+          10,
+          left=IndexableNode(
+              5,
+              left=IndexableNode(2),
+              right=IndexableNode(6, right=IndexableNode(7))),
+          right=IndexableNode(15, left=IndexableNode(11)))
+
+      print('LRR = ', tree.left.right.right.value)
+      print('Index 0 =', tree[0])
+      len(tree) # unsupported, we'd have to implement __len__
+    #+end_src
+
+    #+RESULTS:
+    : LRR =  7
+    : Index 0 = 5
+    : Traceback (most recent call last):
+    :   File "<stdin>", line 1, in <module>
+    :   File "/var/folders/bz/tc86r39x3yb0dm00h93xbbn40000gn/T/babel-5sNdnI/python-z1Pr5V", line 29, in <module>
+    :     len(tree)
+    : TypeError: object of type 'IndexableNode' has no len()
+
+    But we'd really want to have =len=, =count=, =index=, and everything that makes it easy to work with sequences.
+
+    #+begin_src python :session :results output :exports both
+      class SequenceNode(IndexableNode):
+          def __len__(self):
+              _, count = self.search(0, None)
+              return count
+
+
+      tree = SequenceNode(
+          # ...
+      )
+    #+end_src
+
+    Enter =collections.abc=
+
+    #+begin_src python :session :results output :exports both
+        from collections.abc import Sequence
+
+        class BadType(Sequence):
+            pass
+
+        x = BadType()
+    #+end_src
+
+    #+RESULTS:
+    : Traceback (most recent call last):
+    :   File "<stdin>", line 1, in <module>
+    :   File "/var/folders/bz/tc86r39x3yb0dm00h93xbbn40000gn/T/babel-5sNdnI/python-PjJoRI", line 6, in <module>
+    :     x = BadType()
+    : TypeError: Can't instantiate abstract class BadType with abstract methods __getitem__, __len__
+
+    ^ Here it tells us what we need to support a =Sequence= derived class.
+
+
+    #+begin_src python :session :results output :exports both
+      class BetterNode(SequenceNode, Sequence):
+          pass
+
+      tree = BetterNode(
+          # ...
+      )
+    #+end_src
+
+    *Takeaways*
+    
+    - Inherit directly from Python's container types for simple use cases.
+    - Beware of the large numbers of methods required to implement customer container types correctly.
+    - Have you custom container types inherit from the interfaces in =collections.abc= to ensure that your classes match required interfaces and behaviors.
 
 ** Metaclasses and Attributes
+
+*** TODO 29. Use Plain Attributes Instead of Get and Set Methods
+    
+*** TODO 30. Consider =@property= Instead of Refactoring Attributes
+
+*** TODO 31. Use Descriptors for Reusable =@property= Methods
+
+*** TODO 32. Use =__getattr__=, =__getattribute__=, and =__setattr__= for Lazy Attributes
+
+*** TODO 33. Validate Subclasses with Metaclasses
+
+*** TODO 34. Register Class Existence with Metaclasses
+
+*** TODO 35. Annotate Class Attributes with Metaclasses
 
 ** Concurrency and Parallelism
 
@@ -2374,10 +2514,10 @@
 ** Time
 
  #+BEGIN: clocktable :scope file :maxlevel 3
- #+CAPTION: Clock summary at [2019-07-12 Fri 15:42]
+ #+CAPTION: Clock summary at [2019-07-15 Mon 14:26]
  | Headline                                       | Time   |      |      |
  |------------------------------------------------+--------+------+------|
- | *Total time*                                   | *8:56* |      |      |
+ | *Total time*                                   | *9:30* |      |      |
  |------------------------------------------------+--------+------+------|
  | \_  Pythonic Thinking                          |        | 1:27 |      |
  | \_    8. Avoid More Than Two Expressions in... |        |      | 0:07 |
@@ -2395,12 +2535,13 @@
  | \_    19. Provide Optional Behavior with...    |        |      | 0:19 |
  | \_    20. Use None and Docstrings to...        |        |      | 0:37 |
  | \_    21. Enforce Clarity with Keyword-Only... |        |      | 0:24 |
- | \_  Classes and Inheritance                    |        | 3:28 |      |
+ | \_  Classes and Inheritance                    |        | 4:02 |      |
  | \_    22. Prefer Helper Classes Over...        |        |      | 0:35 |
  | \_    23. Accept Functions for Simple...       |        |      | 0:27 |
  | \_    24. Use =@classmethod= Polymorphism...   |        |      | 0:31 |
  | \_    25. Initialize Parent Classes with...    |        |      | 0:38 |
  | \_    26. Use Multiple Inheritance Only for... |        |      | 0:35 |
  | \_    27. Prefer Public Attributes Over...     |        |      | 0:42 |
+ | \_    28. Inherit from =collections.abc=...    |        |      | 0:34 |
  #+END:
  
